--- a/package.json
+++ b/package.json
@@ -11,11 +11,11 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "@core-player/playcore-hls": "^0.1.1",
     "axios": "^0.21.1",
     "vant": "^2.12.21",
-    "video.js": "^7.12.3",
-    "videojs-contrib-hls": "^5.15.0",
     "vue": "^2.5.2",
+    "vue-core-video-player": "^0.2.0",
     "vue-router": "^3.0.1"
   },
   "devDependencies": {
